<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:gravity="bottom|end"
        android:text="@string/_0"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_plus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="addSum"
                android:text="@string/plus"
                android:textSize="36sp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="add7"
                android:text="@string/_7"
                android:textSize="36sp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="add4"
                android:text="@string/_4"
                android:textSize="36sp" />

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="add1"
                android:text="@string/_1"
                android:textSize="36sp" />

            <Button
                android:id="@+id/buttonC"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickClear"
                android:text="@string/c"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_minus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hapticFeedbackEnabled="true"
                android:onClick="addSub"
                android:text="@string/minus"
                android:textSize="36sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="add8"
                android:text="@string/_8"
                android:textSize="36sp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="add5"
                android:text="@string/_5"
                android:textSize="36sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="add2"
                android:text="@string/_2"
                android:textSize="36sp" />

            <Button
                android:id="@+id/button0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="add0"
                android:text="@string/_0"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_x"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hapticFeedbackEnabled="true"
                android:onClick="addMul"
                android:text="@string/x"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="add9"
                android:text="@string/_9"
                android:textSize="36sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="add6"
                android:text="@string/_6"
                android:textSize="36sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="add3"
                android:text="@string/_3"
                android:textSize="36sp" />

            <Button
                android:id="@+id/button_dot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="addDot"
                android:text="@string/dot"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_div"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="80"
                android:hapticFeedbackEnabled="true"
                android:onClick="addDiv"
                android:text="@string/div"
                android:textSize="36sp" />

            <Button
                android:id="@+id/button_equals"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:hapticFeedbackEnabled="true"
                android:onClick="operate"
                android:text="@string/equals"
                android:textSize="36sp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>